@@ -11,6 +11,7 @@ src/Dialog_Progress.cc
 src/DialogFeatures.cc
 src/DialogManageFlags.cc
 src/GParted_Core.cc
+src/HBoxOperations.cc
 src/OperationCopy.cc
 src/OperationCreate.cc
 src/OperationDelete.cc
