@@ -33,6 +33,12 @@ FS hfs::get_filesystem_support()
 	if ( ! Glib::find_program_in_path( "hformat" ) .empty() )
 		fs .create = GParted::FS::EXTERNAL ;
 	
+	if ( ! Glib::find_program_in_path( "hfsck" ) .empty() )
+	{
+		fs .get_label = FS::EXTERNAL ;
+		fs .check = FS::EXTERNAL ;
+	}
+
 	fs .copy = GParted::FS::GPARTED ;
 	fs .move = GParted::FS::GPARTED ;
 	
@@ -47,6 +53,31 @@ void hfs::set_used_sectors( Partition & partition )
 
 void hfs::get_label( Partition & partition )
 {
+	if ( ! Utils::execute_command( "hfsck -v " + partition .get_path(), output, error, true ) )
+	{
+		char buf[512] ;
+		index = output .find( "drVN" ) ;
+
+		if ( index < output .length() && sscanf( output .substr( index ) .c_str(), "drVN = %512s", buf ) == 1 )
+		{
+			partition .label = buf ;
+			
+			//remove "" from the label..
+			if ( partition .label .size() > 0 && partition .label[0] == '\"' )
+				partition .label = partition .label .substr( 1 ) ;
+
+			if ( partition .label .size() > 0 && partition .label[ partition .label .size() -1 ] == '\"' )
+				partition .label = partition .label .substr( 0, partition .label .size() -1 ) ;
+		}
+	}
+	else
+	{
+		if ( ! output .empty() )
+			partition .messages .push_back( output ) ;
+		
+		if ( ! error .empty() )
+			partition .messages .push_back( error ) ;
+	}
 }
 
 bool hfs::create( const Partition & new_partition, OperationDetail & operationdetail )
@@ -68,7 +99,8 @@ bool hfs::copy( const Glib::ustring & src_part_path,
 
 bool hfs::check_repair( const Partition & partition, OperationDetail & operationdetail )
 {
-	return true ;
+	//FIXME: find out what the returnvalue is in case of modified.. also check what the -a flag does.. (there is no manpage)
+	return ! execute_command( "hfsck -v " + partition .get_path(), operationdetail ) ;
 }
 
 } //GParted
