@@ -1,3 +1,7 @@
+2006-10-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* POTFILES.in: added src/HBoxOperations.cc
+
 2006-09-25  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
