@@ -1,3 +1,10 @@
+2006-10-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core: Replaced std::abs with llabs (see #357691)
+	* src/hfs.cc,
+	  src/xfs.cc: added support for reading of volumelabel
+	* src/reiserfs.cc: added Fixme
+
 2006-09-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* configure.in: Fix libparted detection in case --as-needed flag is
